--- a/style.css
+++ b/style.css
@@ -1,34 +1,42 @@
 * {
   box-sizing: border-box;
-  padding: 5px;
-  margin: 5px;
+  padding: 0px;
+  margin: 0px;
 }
 
 body {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100vh;
+  background-color: #ececec;
 }
 
 #container {
-    border-radius: 10px;
-  width: 350px;
+  border-radius: 35px;
+  width: 330px;
   height: 500px;
   display: flex;
   flex-direction: column;
-  background-color: rgb(250, 222, 115);
+  box-shadow: -10px -10px 15px rgba(255, 255, 255, 0.5),
+    10px 10px 15px rgba(70, 70, 70, 0.12);
 }
 
 #panel {
-  height: 150px;
-  background-color: rgb(255, 249, 236);
+  margin: 15px;
+  background-color: #ececec;
   border-radius: 10px;
-  /* display: flex;
+  display: flex;
+  flex-grow: 0;
+  height: 80px;
   flex-direction: column;
-  justify-content: flex-end; */
+  justify-content: flex-end;
+  border: 1px solid #ececec;
+ 
 }
 
 #btns {
+  margin: 15px;
   display: flex;
   flex-direction: column;
   flex-grow: 1;
@@ -40,17 +48,34 @@ body {
 }
 
 button {
-    border-radius: 10px;
-    border: 1px solid rgb(250, 222, 115);
-    box-shadow: 3px 3px black;
-    background-color: rgb(255, 249, 236);
+  width: 10px;
+  margin: 5px;
+  border-radius: 100%;
+  background-color: #ececec;
+  border: 5px solid #ececec;
+  box-shadow: -10px -10px 15px rgba(255, 255, 255, 0.5),
+    10px 10px 15px rgba(70, 70, 70, 0.12);
   flex-grow: 1;
   flex-basis: 0;
+  font-size: larger;
+  color: #7a7a7a;
+}
+
+button:active {
+  box-shadow: -5px -5px 10px rgba(255, 255, 255, 0.5),
+    5px 5px 10px rgba(70, 70, 70, 0.12),
+    inset -5px -5px 10px rgba(255, 255, 255, 0.5),
+    inset 5px 5px 10px rgba(70, 70, 70, 0.12);
+}
+
+button:hover {
+  color: #15e38a;
 }
 
 #flexGrow {
-    flex-grow:2.4;
-    flex-basis: 0;
+  flex-grow: 2.2;
+  flex-basis: 0;
+  border-radius: 50px;
 }
 
 p {
