--- a/style.css
+++ b/style.css
@@ -13,26 +13,27 @@ body {
 }
 
 #container {
-  border-radius: 35px;
+  border-radius: 15px;
+  background-color: rgb(216, 235, 228);
   width: 330px;
-  height: 500px;
+  height: 550px;
   display: flex;
   flex-direction: column;
-  box-shadow: -10px -10px 15px rgba(255, 255, 255, 0.5),
+  box-shadow: 
     10px 10px 15px rgba(70, 70, 70, 0.12);
 }
 
 #panel {
-  margin: 15px;
+  width: 300px;
+  margin: 0px 5px;
+  margin-left: 15px;
   background-color: #ececec;
-  border-radius: 10px;
   display: flex;
-  flex-grow: 0;
-  height: 80px;
+  flex-grow: 0.5;
+  height: 100px;
+  border-radius: 0px 0px 50px 50px;
   flex-direction: column;
-  justify-content: flex-end;
-  border: 1px solid #ececec;
- 
+  background-color: rgb(232, 240, 239);
 }
 
 #btns {
@@ -51,10 +52,10 @@ button {
   width: 10px;
   margin: 5px;
   border-radius: 100%;
-  background-color: #ececec;
-  border: 5px solid #ececec;
-  box-shadow: -10px -10px 15px rgba(255, 255, 255, 0.5),
-    10px 10px 15px rgba(70, 70, 70, 0.12);
+  background-color: rgb(232, 240, 239);
+  border: none;
+  box-shadow: 
+    5px 5px 10px rgba(70, 70, 70, 0.12);
   flex-grow: 1;
   flex-basis: 0;
   font-size: larger;
@@ -62,14 +63,15 @@ button {
 }
 
 button:active {
-  box-shadow: -5px -5px 10px rgba(255, 255, 255, 0.5),
-    5px 5px 10px rgba(70, 70, 70, 0.12),
-    inset -5px -5px 10px rgba(255, 255, 255, 0.5),
-    inset 5px 5px 10px rgba(70, 70, 70, 0.12);
+  box-shadow: 5px 1px 10px rgba(70, 70, 70, 0.12);
+  position: relative;
+  top:2px;
 }
 
+
 button:hover {
-  color: #15e38a;
+  /* color: #15e38a; */
+  color: rgb(136, 205, 174);
 }
 
 #flexGrow {
@@ -81,5 +83,10 @@ button:hover {
 p {
   font-size: 2rem;
   text-align: right;
-  margin-top: 65px;
+  margin-top: 90px;
+  padding-right: 8px;
+}
+
+.oper {
+  background-color: rgb(201, 219, 213);
 }
