--- a/style.css
+++ b/style.css
@@ -19,8 +19,7 @@ body {
   height: 550px;
   display: flex;
   flex-direction: column;
-  box-shadow: 
-    10px 10px 15px rgba(70, 70, 70, 0.12);
+  box-shadow: 10px 10px 15px rgba(70, 70, 70, 0.12);
 }
 
 #panel {
@@ -49,15 +48,13 @@ body {
 }
 
 button {
-  width: 10px;
-  margin: 5px;
   border-radius: 100%;
+  margin: 5px;
   background-color: rgb(232, 240, 239);
   border: none;
-  box-shadow: 
-    5px 5px 10px rgba(70, 70, 70, 0.12);
-  flex-grow: 1;
-  flex-basis: 0;
+  box-shadow: 5px 5px 10px rgba(70, 70, 70, 0.12);
+
+  flex-basis: 25%;
   font-size: larger;
   color: #7a7a7a;
 }
@@ -65,9 +62,8 @@ button {
 button:active {
   box-shadow: 5px 1px 10px rgba(70, 70, 70, 0.12);
   position: relative;
-  top:2px;
+  top: 2.5px;
 }
-
 
 button:hover {
   /* color: #15e38a; */
@@ -75,8 +71,8 @@ button:hover {
 }
 
 #flexGrow {
-  flex-grow: 2.2;
-  flex-basis: 0;
+  margin: 5px;
+  flex-basis: 53%;
   border-radius: 50px;
 }
 
