--- a/style.css
+++ b/style.css
@@ -13,26 +13,30 @@ body {
 }
 
 #container {
-  border-radius: 15px;
-  background-color: rgb(216, 235, 228);
+  border-radius: 35px;
   width: 330px;
-  height: 550px;
+  height: 500px;
   display: flex;
   flex-direction: column;
-  box-shadow: 10px 10px 15px rgba(70, 70, 70, 0.12);
+  box-shadow: -10px -10px 15px rgba(255, 255, 255, 0.5),
+    10px 10px 15px rgba(70, 70, 70, 0.12);
 }
 
 #panel {
-  width: 300px;
-  margin: 0px 5px;
-  margin-left: 15px;
+  margin: 15px;
+  padding-right: 5px;
   background-color: #ececec;
+  border-radius: 10px;
   display: flex;
-  flex-grow: 0.5;
-  height: 100px;
-  border-radius: 0px 0px 50px 50px;
+  flex-grow: 0;
+  height: 80px;
   flex-direction: column;
-  background-color: rgb(232, 240, 239);
+  justify-content: flex-end;
+  border: 1px solid #ececec;
+  font-size: 30px;
+  text-align: right;
+  overflow: hidden;
+  overflow-wrap: break-word;
 }
 
 #btns {
@@ -48,41 +52,38 @@ body {
 }
 
 button {
-  border-radius: 100%;
+  width: 10px;
   margin: 5px;
-  background-color: rgb(232, 240, 239);
-  border: none;
-  box-shadow: 5px 5px 10px rgba(70, 70, 70, 0.12);
-
-  flex-basis: 25%;
+  border-radius: 100%;
+  background-color: #ececec;
+  border: 5px solid #ececec;
+  box-shadow: -10px -10px 15px rgba(255, 255, 255, 0.5),
+    10px 10px 15px rgba(70, 70, 70, 0.12);
+  flex-grow: 1;
+  flex-basis: 0;
   font-size: larger;
   color: #7a7a7a;
 }
 
 button:active {
-  box-shadow: 5px 1px 10px rgba(70, 70, 70, 0.12);
-  position: relative;
-  top: 2.5px;
+  box-shadow: -5px -5px 10px rgba(255, 255, 255, 0.5),
+    5px 5px 10px rgba(70, 70, 70, 0.12),
+    inset -5px -5px 10px rgba(255, 255, 255, 0.5),
+    inset 5px 5px 10px rgba(70, 70, 70, 0.12);
 }
 
 button:hover {
-  /* color: #15e38a; */
-  color: rgb(136, 205, 174);
+  color: #15e38a;
 }
 
 #flexGrow {
-  margin: 5px;
-  flex-basis: 53%;
+  flex-grow: 2.2;
+  flex-basis: 0;
   border-radius: 50px;
 }
 
 p {
   font-size: 2rem;
   text-align: right;
-  margin-top: 90px;
-  padding-right: 8px;
-}
-
-.oper {
-  background-color: rgb(201, 219, 213);
+  margin-top: 65px;
 }
